# mkdocs_resolve_absolute_urls_plugin

./: .coveragerc  LICENSE  README.md  pyproject.toml
.github/workflows/: CD.yml  CI.yml
src/resolve_absolute_urls/: plugin.py
tests/: test_plugin.py
