[project]
name = "mkdocs-resolve-absolute-urls-plugin"
dynamic = ["version"]
authors = [
  {name = "Davide Marchegiani", email="davide.marchegiani@anu.edu.au"},
]
description = "A MkDocs plugin to resolve absolute URLs relative to the `site_url` value in the MkDocs configuration, rather than the root url of the website."
license = { file = "LICENSE" }
keywords = ["mkdocs", "plugin", "mkdocs plugin", "access-nri"]
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6",
    "versioneer",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Repository = "https://github.com/ACCESS-NRI/mkdocs_resolve_absolute_urls_plugin"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>64",
    "versioneer[toml]",
]

[project.entry-points."mkdocs.plugins"]
resolve-absolute-urls = "resolve_absolute_urls.plugin:ResolveAbsoluteUrlsPlugin"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/resolve_absolute_urls/_version.py"
versionfile_build = "resolve_absolute_urls/_version.py"
tag_prefix = ""
parentdir_prefix = "mkdocs-resolve-absolute-urls-plugin-"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests/"]
addopts = "--cov=src --cov-report=term-missing"